# dcn-timetable

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.bat  pdf_extracted.txt  run-client.bat  run-server.bat
client/: timetable_gui.py
client/src/: client.cpp
data/: timetable.csv  users.csv
docs/: protocol.md
server/: crypto.h  database.h  logger.h  protocol.h  server.cpp
web/: README.md  app.js  bridge.py  index.html  style.css
web/legacy/: app.js  index.html
